--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9441,6 +9441,10 @@ img[src$='.svg'] {
     width: 100%;
     border-top: 1px solid #e9e9e9;
 }
+.p-accordion__container:hover {
+  background-color: #656e73;
+  transition: 0.5s;
+}
 
 .p-accordion__container:last-child {
     border-bottom: 1px solid #e9e9e9;
