--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -9484,9 +9484,11 @@ img[src$='.svg'] {
 }
 
 @media screen and (min-width:769px) {
-    .p-accordion__container:last-child .p-accordion__list__item:first-child {
-        padding-right: 3.51vw;
-    }
+  .p-accordion__container:last-child .p-accordion__list__item:first-child {
+    padding-right: 3.51vw;
+    padding-bottom: 1vw;
+}
+
 }
 
 .p-accordion__container.is-open .p-accordion__btn__img {
@@ -10830,6 +10832,7 @@ footer {
 
 
 
+
 /*-------------------------------------------------------------------------------------------------ここからは自分が新たに追加したcssを書いていきます*/
 
 .c {
@@ -10916,17 +10919,17 @@ table td {
     font-family: serif;
 }
 .border2 {
-    border-top: 2px dotted gray;
-    border-bottom: 2px dotted gray;
-    width: 20vw;
-    font-weight: bold;
-    color: #a0a0a0;
-    font-size: 1.3vw;
-    /* font-family: serif; */
-    margin-left: 7vw;
-    padding-top: 0.8vw;
-    padding-left: 1vw;
-    padding-bottom: 0.8vw;
+  border-top: 2px dotted gray;
+  border-bottom: 2px dotted gray;
+  width: 20vw;
+  font-weight: bold;
+  color: #e2b274;
+  font-size: 1.3vw;
+  /* font-family: serif; */
+  margin-left: 7vw;
+  padding-top: 0.8vw;
+  padding-left: 1vw;
+  padding-bottom: 0.8vw;
 }
 .p-text {
     font-family: serif;
@@ -11280,6 +11283,9 @@ table td {
         margin-left: 4vw;
         margin-right: 4vw;
     }
+    .topText {
+      margin-left: 8vw;
+  }
     .p-products__card__block .p-products__card__inner__info .info__desc {
         font-size: 28px;
     }
