一通りコミットは完成しました

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -611,6 +611,9 @@ img[src$='.svg'] {
     .c-top_block__content {
         margin-top: 8vw
     }
+    .c-top_block__content2{
+        margin-top: 70vw;
+    }
 }
 
 .c-top_block__note {
